{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 17,
  "lineage": "839a2c6c-f41d-8e64-bb17-029caa70c484",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aae4ed2ead014e0c",
            "arn": "arn:aws:ec2:us-east-1:676015970657:instance/i-036a77dbad3e29bc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036a77dbad3e29bc6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systS144-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047d32eeb67d0306a",
            "private_dns": "ip-192-168-1-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.214",
            "public_dns": "ec2-54-172-221-214.compute-1.amazonaws.com",
            "public_ip": "54.172.221.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d55abeebb79864e7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0112303102f7ed433",
            "tags": {
              "Name": "EC2-instance-1"
            },
            "tags_all": {
              "Name": "EC2-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb21a9d5799015d7"
            ]
          },
          "dependencies": [
            "aws_security_group.assign3-sg",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aae4ed2ead014e0c",
            "arn": "arn:aws:ec2:us-east-1:676015970657:instance/i-074d9ad8eaf29e391",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074d9ad8eaf29e391",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systS144-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1d553a2451d8bf4",
            "private_dns": "ip-192-168-2-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.252",
            "public_dns": "ec2-54-144-44-174.compute-1.amazonaws.com",
            "public_ip": "54.144.44.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b1d5d3ddd7ccc6c8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6a3cb36e36b56a5",
            "tags": {
              "Name": "EC2-instance-2"
            },
            "tags_all": {
              "Name": "EC2-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb21a9d5799015d7"
            ]
          },
          "dependencies": [
            "aws_security_group.assign3-sg",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aae4ed2ead014e0c",
            "arn": "arn:aws:ec2:us-east-1:676015970657:instance/i-0964a055d142cccd3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0964a055d142cccd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systS144-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02660ed1c8048b516",
            "private_dns": "ip-192-168-3-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.172",
            "public_dns": "ec2-44-222-84-80.compute-1.amazonaws.com",
            "public_ip": "44.222.84.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af0a5e2550705980",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ad46a65513ab28b",
            "tags": {
              "Name": "EC2-instance-3"
            },
            "tags_all": {
              "Name": "EC2-instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb21a9d5799015d7"
            ]
          },
          "dependencies": [
            "aws_security_group.assign3-sg",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aae4ed2ead014e0c",
            "arn": "arn:aws:ec2:us-east-1:676015970657:instance/i-0645d5d0fb6a132c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0645d5d0fb6a132c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "systS144-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0843746acb171f524",
            "private_dns": "ip-192-168-4-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.9",
            "public_dns": "ec2-54-86-54-220.compute-1.amazonaws.com",
            "public_ip": "54.86.54.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f109d8b2e1e0c03",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a13e05e83a9d1af",
            "tags": {
              "Name": "EC2-instance-4"
            },
            "tags_all": {
              "Name": "EC2-instance-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb21a9d5799015d7"
            ]
          },
          "dependencies": [
            "aws_security_group.assign3-sg",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:internet-gateway/igw-051fb1720ca155034",
            "id": "igw-051fb1720ca155034",
            "owner_id": "676015970657",
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "vpc_id": "vpc-076a8d60359edfb70"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:route-table/rtb-0ea73ff0e86fd7ab4",
            "id": "rtb-0ea73ff0e86fd7ab4",
            "owner_id": "676015970657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051fb1720ca155034",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a8d60359edfb70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e143d6ef953576b6",
            "route_table_id": "rtb-0ea73ff0e86fd7ab4",
            "subnet_id": "subnet-0112303102f7ed433"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.public-RT",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0983f88c9f73efba2",
            "route_table_id": "rtb-0ea73ff0e86fd7ab4",
            "subnet_id": "subnet-0a6a3cb36e36b56a5"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.public-RT",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05356a77dc873fda9",
            "route_table_id": "rtb-0ea73ff0e86fd7ab4",
            "subnet_id": "subnet-00ad46a65513ab28b"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.public-RT",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2616fdca104c7fd",
            "route_table_id": "rtb-0ea73ff0e86fd7ab4",
            "subnet_id": "subnet-01a13e05e83a9d1af"
          },
          "dependencies": [
            "aws_internet_gateway.igw-tf",
            "aws_route_table.public-RT",
            "aws_subnet.public-SN",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "assign3-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:security-group/sg-0eb21a9d5799015d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb21a9d5799015d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "assign3-sg",
            "name_prefix": "",
            "owner_id": "676015970657",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "igw-tf"
            },
            "tags_all": {
              "Name": "igw-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-076a8d60359edfb70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:subnet/subnet-0112303102f7ed433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0112303102f7ed433",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676015970657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-SN-1"
            },
            "tags_all": {
              "Name": "public-SN-1"
            },
            "vpc_id": "vpc-076a8d60359edfb70"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:subnet/subnet-0a6a3cb36e36b56a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6a3cb36e36b56a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676015970657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-SN-2"
            },
            "tags_all": {
              "Name": "public-SN-2"
            },
            "vpc_id": "vpc-076a8d60359edfb70"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:subnet/subnet-00ad46a65513ab28b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ad46a65513ab28b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676015970657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-SN-3"
            },
            "tags_all": {
              "Name": "public-SN-3"
            },
            "vpc_id": "vpc-076a8d60359edfb70"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:subnet/subnet-01a13e05e83a9d1af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a13e05e83a9d1af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "676015970657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-SN-4"
            },
            "tags_all": {
              "Name": "public-SN-4"
            },
            "vpc_id": "vpc-076a8d60359edfb70"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:676015970657:vpc/vpc-076a8d60359edfb70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-008588a798c53b08a",
            "default_route_table_id": "rtb-0fc019b237efbd242",
            "default_security_group_id": "sg-0d892e314077f51c2",
            "dhcp_options_id": "dopt-00a5758092d6dc0f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076a8d60359edfb70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc019b237efbd242",
            "owner_id": "676015970657",
            "tags": {
              "Name": "vpc-A"
            },
            "tags_all": {
              "Name": "vpc-A"
            }
          }
        }
      ]
    }
  ]
}